# picomatch-rs

./: .gitignore  ACTION_ITEMS.md  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README  README.md  REVIEW.md  REVIEW_SUMMARY.md  TEST_COVERAGE_ANALYSIS.md  index.d.ts  index.js  native.js  package.json  process.md  测试覆盖率分析.md
crates/picomatch-rs/: Cargo.toml
crates/picomatch-rs/examples/: basic_matching.rs  compile_matcher.rs  options.rs  parse_patterns.rs  scan_patterns.rs
crates/picomatch-rs/src/: compile.rs  constants.rs  lib.rs  matcher.rs  scan.rs  utils.rs
crates/picomatch-rs/tests/: api_picomatch.rs  api_posix.rs  bash.rs  bash_spec.rs  braces.rs  brackets.rs  dotfiles.rs  dots_invalid.rs  extglobs.rs  extglobs_bash_generated.rs  extglobs_minimatch.rs  extglobs_temp.rs  globstars.rs  issue_related.rs  malicious.rs  match_basic.rs  minimatch.rs  negation.rs  non_globs.rs  optimizations.rs  options.rs  options_expand_range.rs  options_format.rs  options_ignore.rs  options_noextglob.rs  options_noglobstar.rs  options_on_match.rs  parens.rs  posix_classes.rs  qmarks.rs  regex_features.rs  scan_api.rs  slashes_posix.rs  slashes_windows.rs  special_characters.rs  stars.rs  wildmat.rs
crates/picomatch-rs/tests/status/: api_picomatch.md  api_posix.md  bash.md  bash_spec.md  braces.md  brackets.md  dotfiles.md  dots_invalid.md  extglobs-bash.md  extglobs.md  extglobs_minimatch.md  extglobs_temp.md  globstars.md  issue_related.md  malicious.md  minimatch.md  negation.md  non_globs.md  options.md  options_expand_range.md  options_format.md  (+14 more)
napi/: Cargo.toml  index.d.ts
napi/src/: lib.rs
(+22 files in other folders)
